<resources>
    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_total">Bill Total</string>
    <string name="zero_value">0.00</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="bill_amount">Enter bill amount here</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="percent_value">18%</string>
    <string name="two_dec_float">%.02f</string>
    <string name="percent_sign">%</string>
</resources>
