<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:stretchColumns="1,2,3"
    android:padding="5dp"
    android:id="@+id/tableLayout"
    android:background="#fff">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow0"
        android:baselineAligned="false"
        android:padding="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_total"
            android:id="@+id/billTextView"
            android:layout_column="0"
            android:padding="5dp"
            android:textSize="20sp"
            android:typeface="normal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/billEditText"
            android:layout_column="1"
            android:hint="@string/bill_amount"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:cursorVisible="false"
            android:layout_span="3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow1"
        android:baselineAligned="true"
        android:padding="5dp">


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ten_percent"
        android:id="@+id/tenTextView"
            android:padding="5dp"
        android:layout_column="1"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent"
            android:id="@+id/fifteenTextView"
            android:padding="5dp"
            android:layout_column="2"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percent"
            android:id="@+id/twentyTextView"
            android:padding="5dp"
            android:layout_column="3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow2"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:id="@+id/tipTextView"
            android:layout_column="0"
            android:gravity="center_vertical|end"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip10EditText"
            android:padding="5dp"
            android:hint="@string/zero_value"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip15EditText"
            android:padding="5dp"
            android:hint="@string/zero_value"
            android:layout_column="2"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tip20EditText"
            android:padding="5dp"
            android:hint="@string/zero_value"
            android:layout_column="3"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow3"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/totalTextView"
            android:layout_column="0"
            android:gravity="center_vertical|end"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total10EditText"
            android:layout_column="1"
            android:hint="@string/zero_value"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total15EditText"
            android:layout_column="2"
            android:hint="@string/zero_value"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total20EditText"
            android:layout_column="3"
            android:hint="@string/zero_value"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow4"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            android:id="@+id/customTextView"
            android:layout_column="0"
            android:padding="5dp"
            android:gravity="center_vertical|end"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customSeekBar"
            android:layout_column="1"
            android:layout_span="2"
            android:progress="18"
            android:padding="5dp"
            android:indeterminate="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_value"
            android:id="@+id/customTipTextView"
            android:layout_column="3"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:focusable="false"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow5"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip"
            android:id="@+id/tipCustomTextView"
            android:layout_column="0"
            android:textSize="20sp"
            android:gravity="center_vertical|end"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customTipEditText"
            android:hint="@string/zero_value"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/totalCustomTextView"
            android:layout_column="2"
            android:gravity="center_vertical|end"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customTotalEditText"
            android:layout_column="3"
            android:hint="@string/zero_value"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:longClickable="false"
            android:cursorVisible="false" />
    </TableRow>

</TableLayout>
